--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^5.0.0",
     "express": "^4.16.2",
     "lodash": "^4.17.5",
+    "moji-translate": "^1.0.8",
     "prettier-eslint": "^8.8.1",
     "save": "^2.3.2",
     "translate": "^1.0.2",
